# khuldraeseth.github.io

./: .gitignore  LICENSE  README.md  about.html  about.rst  archive.html  blog.cabal  contact.html  index.html  resume.md  site.hs
.github/workflows/: deploy.yaml
cse260/: index.html
cse260/hw/: index.html
css/: default.css
dnd/: sheet.html  sheet.js
docs/: hw1_example.tex  prefix.hs  syllabus260.pdf:Zone.Identifier
html/: guidelines.html
md/: guidelines.md
pmd/: serve  sheet.js
pmd/classes/: amaura.js
posts/: 2015-08-23-example.html  2015-08-23-example.markdown  2020-08-11-example.html  2020-08-11-getting-started.md  2020-08-25-constrained-functors-1.html  2020-08-25-constrained-functors-1.md
sheet/: sheet.html  sheet.js
sheet/classes/: amaura.js  budew.js  chespin.js  cleffa.js  treecko.js
