name:          blog
version:       0.1.0.0
build-type:    Simple
license:       MIT
license-file:  LICENSE
cabal-version: >=1.10
category:      Web
maintainer:    28711596+khuldraeseth@users.noreply.github.com
synopsis:      My personal blog
description:   This is my personal blog.

executable site
  main-is:          site.hs
  build-depends:
      base
    , hakyll

  ghc-options:      -threaded -rtsopts -with-rtsopts=-N
  default-language: GHC2021
